Changelog
=========


1.2.1 (unreleased)
------------------

- Support "on" keyword argument for with_roles method in group builder.
  [mathias.leimgruber]


1.2.0 (2014-01-31)
------------------

- Add `providing()` method to Plone builder,
  letting the object provide interfaces.
  [jone]

- Don't use IDNormalizer for Mail. It handles Umlauts weird.
  [tschanzt]


1.1.0 (2013-09-13)
------------------

- Add groups builder.
  [jone]

- Add users builder.
  [jone]

- Added modification date setter for PloneObject Builders.
  [phgross]


1.0.0 (2013-08-12)
------------------

- Added dexterity support.
  [phgross]

- Initial implementation
  [jone]