@@ -5,6 +5,9 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
+- Reindex object security after setting local roles for a principal.
+  [mathias.leimgruber]
+
 - Support "on" keyword argument for with_roles method in group builder.
   [mathias.leimgruber]
 
